--- a/LAW.uproject
+++ b/LAW.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "LAW",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"ALSV4_CPP"
+			]
 		}
 	],
 	"Plugins": [
